# w3g-parser

./: .gitignore  LICENSE  README.md  go.mod  pyproject.toml  spec.md
docs/: FORMAT.md
pkg/w3g/: actions.go  chat.go  constants.go  decompressor.go  encoded.go  errors.go  header.go  models.go  parser.go  players.go  w3g.go
src/w3g_parser/: __init__.py  actions.py  chat.py  cli.py  constants.py  decompressor.py  exceptions.py  header.py  models.py  parser.py  players.py
tests/: __init__.py  conftest.py  test_header.py  test_parser.py
